# hackbay2025

./: .gitignore  README.md  docker-compose.yml  shell.nix
.cursor/rules/: fastapi-performance-optimization.mdc  general-typescript-nextjs-rule.mdc  nextjs-component-rule.mdc
backend/: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  crawl.py  log_conf.yml  main.py  pyproject.toml
backend/app/: app.py  database.py  mock_data_helper.py  oauth2_helper.py  settings.py
backend/app/models/: Event.py  EventTagLink.py  EventUserLink.py  Organiser.py  Tag.py  User.py  UserHealthData.py  UserTagLink.py  __init__.py
backend/app/routers/: __init__.py  events.py  health.py  search.py  tags.py  users.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/res/cached-search-results/: badminton.json  basketball.json  cycling.json  pilates.json  running.json  soccer.json  volleyball.json  yoga.json
documentation/: README.md  key-features.md  monetarisation.md  pitch-script.md  pitch.md
frontend/: .dockerignore  Dockerfile  README.md  _findhost.mjs  bun.lockb  package.json  prettier.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/calendar/: page.tsx
frontend/app/connect/: page.tsx
frontend/app/context/: DataContext.tsx
frontend/app/login/: login-form.tsx  page.tsx
frontend/app/map/: page.module.css  page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx  registration.tsx
frontend/app/registration/: data.ts  page.tsx  registration-flow.tsx  registration.tsx  types.ts
frontend/app/settings/: page.tsx
frontend/app/yvestest/: page.tsx
frontend/components/: combobox.tsx  date-picker.tsx  footer.tsx  header.tsx  protected-route.tsx
frontend/components/ui/: calendar.tsx  card.tsx  command.tsx  navigation-menu.tsx  popover.tsx  scroll-area.tsx  spinner.tsx  (+2 more)
frontend/lib/: api-config.ts  api-helpers.ts  auth-context.tsx  use-api.tsx
(+30 files in other folders)
