[project]
name = "LiveMeshBackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.7",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.11",
    "geopy>=2.4.1",
    "googlesearch-python>=1.3.0",
    "ollama>=0.5.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120
exclude = [".git", ".venv", "venv"]
lint.extend-select = ["I"]
